--- a/remove_duplicate_pages_text.ipynb
+++ b/remove_duplicate_pages_text.ipynb
@@ -62,7 +62,7 @@
         "# EDIT FILE NAMES and FRONT MATTER\n",
         "# the names of the input and output files can be changed here\n",
         "dirty_index = '/content/gdrive/My Drive/index.txt'\n",
-        "clean_index = \"clean_index_20190424.txt\"\n",
+        "clean_index = \"clean_index.txt\"\n",
         "# list all roman numerals here (currently up to 12)\n",
         "front_matter = [\n",
         "    \"i\", \"ii\", \"iii\", \"iv\", \"v\", \"vi\", \"vii\", \"viii\", \"ix\", \"x\", \"xi\", \"xii\"]\n"
